--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,9 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/11422957.jpeg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Javi Villar</title>
 	</head>
 	<body>
 		<div class="ocean">
@@ -20,10 +20,11 @@
 	html,
 	body {
 		margin: 0;
-		width: 100%;
-		height: 100%;
+		width: 100vw;
+		height: 100vh;
 		background-color: rgb(181, 248, 243);
 		font-family: "Inter", sans-serif;
+		overflow: hidden;
 	}
 
 	.ocean {
