--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,9 +8,24 @@
 		<title>Javi Villar</title>
 	</head>
 	<body>
-		<div class="ocean">
-			<div class="wave"></div>
-			<div class="wave"></div>
+		<div class="waves">
+			<svg viewBox="0 0 2 1" preserveAspectRatio="none">
+				<defs>
+					<path
+						id="w"
+						d="
+      m0 1v-.5 
+      q.5.5 1 0
+      t1 0 1 0 1 0
+      v.5z"
+					></path>
+				</defs>
+				<g>
+					<use href="#w" y=".1" fill="#003b61"></use>
+					<use href="#w" y=".2" fill="#318db2"></use>
+					<use href="#w" y=".0" fill="#30b1ce"></use>
+				</g>
+			</svg>
 		</div>
 		<slot />
 	</body>
@@ -27,50 +42,33 @@
 		overflow: hidden;
 	}
 
-	.ocean {
-		height: 5%;
-		width: 100%;
-		position: absolute;
+	.waves {
+		position: fixed;
 		bottom: 0;
-		left: 0;
-		background: #015871;
+		display: flex;
+
+		use {
+			animation: move-forever 5s linear infinite;
+			&:nth-child(2) {
+				animation-duration: 8s;
+				animation-delay: -1.5s;
+			}
+			&:nth-child(1) {
+				animation-duration: 15s;
+			}
+		}
+		svg {
+			width: 100vw;
+			height: 120px;
+		}
 	}
 
-	.wave {
-		background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/85486/wave.svg)
-			repeat-x;
-		position: absolute;
-		top: -198px;
-		width: 6400px;
-		height: 198px;
-		animation: wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
-		transform: translate3d(0, 0, 0);
-	}
-
-	.wave:nth-of-type(2) {
-		top: -175px;
-		animation:
-			wave 7s cubic-bezier(0.36, 0.45, 0.63, 0.53) -0.125s infinite,
-			swell 7s ease -1.25s infinite;
-		opacity: 1;
-	}
-
-	@keyframes wave {
+	@keyframes move-forever {
 		0% {
-			margin-left: 0;
+			transform: translate(-2px, 0);
 		}
 		100% {
-			margin-left: -1600px;
-		}
-	}
-
-	@keyframes swell {
-		0%,
-		100% {
-			transform: translate3d(0, -25px, 0);
-		}
-		50% {
-			transform: translate3d(0, 5px, 0);
+			transform: translate(0px, 0);
 		}
 	}
 </style>
