--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
-import Main from '../components/Main.astro'
 import Layout from '../layouts/Layout.astro';
+import Main from '../components/Main.astro'
+import Footer from '../components/Footer.astro'
 ---
 
 <Layout>
 	<Main />
+	<Footer />
 </Layout>
