--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,9 @@
+---
+const currentLang = Astro.currentLocale || "es";
+---
+
 <!doctype html>
-<html lang="en">
+<html lang={currentLang}>
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
@@ -11,14 +15,11 @@
 		<div class="waves">
 			<svg viewBox="0 0 2 1" preserveAspectRatio="none">
 				<defs>
-					<path
-						id="w"
-						d="
-      m0 1v-.5 
-      q.5.5 1 0
-      t1 0 1 0 1 0
-      v.5z"
-					></path>
+					<path id="w" d="
+						m0 1v-.5 
+						q.5.5 1 0
+						t1 0 1 0 1 0
+						v.5z"></path>
 				</defs>
 				<g>
 					<use href="#w" y=".1" fill="#003b61"></use>
