--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import LangSelector from '../components/LangSelector.astro';
 import Main from '../components/Main.astro'
 import Footer from '../components/Footer.astro'
 ---
 
 <Layout>
+	<LangSelector />
 	<Main />
 	<Footer />
 </Layout>
